--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-list-endpoints": "^7.1.0",
+    "express-validator": "^7.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5"
   },
